# travl-planner

./: .gitignore  README.md  index.html  pyproject.toml  start.sh  wrangler.toml
css/: style.css
docs/: 打包清单.txt  配置使用手册_详细版.md
env/: .env.trip_planner.example  .env.weather.example  .env.wechat_oa.example
functions/api/: plan.js
js/: api.js  app.js  data.js  input.js  map.js  pdf.js
templates/: codex.mcp.config.toml.template  request.template.json  user_profile.template.json
